Making all form fields have unique ids

--- a/rca/project_styleguide/templates/patterns/atoms/form-file/form-file--help.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-file/form-file--help.yaml
@@ -1,6 +1,5 @@
 context:
   field:
     label: Standard input help
-    id_for_label: input-help
+    id_for_label: file-help
     help_text: This is help text
-    errors: Required
