--- a/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel.yaml
@@ -1,5 +1,5 @@
 context:
   field:
-    label: Telephone number
+    label: Telephone
     errors: false
-    id_for_label: input
+    id_for_label: telephone
