--- a/rca/project_styleguide/templates/patterns/atoms/form-file/form-file--required.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-file/form-file--required.yaml
@@ -1,7 +1,6 @@
 context:
   field:
     label: Standard input required
-    id_for_label: input-required
+    id_for_label: file-required
     field:
       required: True
-    errors: Required
