--- a/rca/project_styleguide/templates/patterns/atoms/form-select/form-select--help.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-select/form-select--help.yaml
@@ -1,9 +1,8 @@
 context:
   field:
     label: Select field help
-    id_for_label: input-help
+    id_for_label: select-help
     help_text: Select help text
-    errors: Required
     options:
       - { title: one }
       - { title: two }
