--- a/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel--required.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-tel/form-tel--required.yaml
@@ -1,7 +1,6 @@
 context:
   field:
-    label: Telephone number required
-    id_for_label: input-required
+    label: Telephone required
+    id_for_label: telephone-required
     field:
       required: True
-    errors: Required
