--- a/rca/project_styleguide/templates/patterns/atoms/form-radio/form-radio--required.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/form-radio/form-radio--required.yaml
@@ -1,6 +1,6 @@
 context:
   field:
-    label: radio required
+    label: Radio required
     id_for_label: radio-required
     field:
       required: True
