--- a/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soa.yaml
@@ -10,8 +10,7 @@ context:
     introduction_image: True
     school_dean: Dr Adrian Lahoud
     location: <p><a>RCA Kensington</a></p>
-    next_open_day_start_date: !!timestamp '2021-02-27 2:00:00'
-    next_open_day_end_date: !!timestamp '2021-02-27 2:00:00'
+    next_open_day_date: !!timestamp '2021-02-27 2:00:00'
     get_in_touch: <p>0123456789</p><p><a href="">soa-admins@rca.ac.uk</a></p>
     social_links:
       - '<a href="https://twitter.com/rcaarchitecture" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Twitter</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
