--- a/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soah.yaml
@@ -10,8 +10,7 @@ context:
     introduction_image: True
     school_dean: Ken Neil
     location: <p><a>RCA Battersea</a></p><p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>
-    next_open_day_start_date: False
-    next_open_day_end_date: False
+    next_open_day_date: False
     get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
     social_links: False
     video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
