Adding view all staff CTA

--- a/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/people-module/people-module.yaml
@@ -1,7 +1,8 @@
 context:
   title: Staff
   page:
-    staff_link: false
+    staff_link: '#'
+    staff_link_text: 'View more staff'
   people:
     - {
         name: 'Beth Hughes',
