--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.yaml
@@ -11,7 +11,7 @@ context:
     school_dean: John Smith
     location: <p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>
     next_open_day_date: !!timestamp '2020-12-13 2:00:00'
-    get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
+    get_in_touch: <p>+44 (0)20 7590 4444</p><p><a href="">email@rca.ac.uk</a></p>
     social_links:
       - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Facebook</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
       - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Twitter</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
