--- a/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/soc.yaml
@@ -11,7 +11,7 @@ context:
     school_dean: Rathna Ramanathan
     location: <p><a>RCA White City</a></p>
     next_open_day_date: !!timestamp '2021-01-27 2:00:00'
-    get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
+    get_in_touch: <p>+44 (0)20 7590 4444</p><p><a href="">email@rca.ac.uk</a></p>
     social_links:
       - '<a href="https://www.instagram.com/rcasoc/" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Instagram</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
     video: 'https://www.youtube.com/watch?v=hEV0YUfz52s&list=PLk-Jp7vRQvwNQ_B4fvlPpDcudkDtjItY9&index=2'
