--- a/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/schools/sod.yaml
@@ -11,7 +11,7 @@ context:
     school_dean: Paul Anderson
     location: <p><a>RCA Kensington</a></p>
     next_open_day_date: False
-    get_in_touch: <p>0123456789</p><p><a href="">email@rca.ac.uk</a></p>
+    get_in_touch: <p>+44 (0)20 7590 4444</p><p><a href="">email@rca.ac.uk</a></p>
     social_links: False
     video: 'https://www.youtube.com/watch?v=tDPrqkgQpWM&list=PLk-Jp7vRQvwPUj9xBUTWyaDPG4MOwzDkz'
     video_caption: Welcome to the School
