--- a/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/logo-card/logo-card.yaml
@@ -11,7 +11,7 @@ tags:
       target_var: image_small
       raw:
         url: '//placekitten.com/20/20'
-    item.image fill-200x200 as image_large:
+    item.image max-200x200 as image_large:
       target_var: image_large
       raw:
         url: '//placekitten.com/200/200'
