--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.yaml
@@ -3,6 +3,7 @@ context:
     school_dean: John Smith
     location: <p><a>RCA Kensington</a></p><p><a>RCA White City</a></p>.
     next_open_day_date: !!timestamp '2020-12-13 2:00:00'
+    link_to_open_days: '#'
     get_in_touch: <p>0123456789</p><p>email@rca.ac.uk</p>
     social_links:
       - '<a href="#" class="link link--tertiary link--link link--external" target="_blank"><span class="link__label">Facebook</span><svg width="11" height="13" class="link__icon" aria-hidden="true"><use xlink:href="#arrow-external"></use></svg></a>'
