--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.yaml
@@ -8,10 +8,10 @@ context:
         depth: 3
         title: Our Students
     profile_image: true
-    staff_title: Professor
+    student_title: Professor
     first_name: Katrine
     last_name: Hesseldahl
-    profile_type: Current PhD student
+    student_type: Current PhD student
     job_title:
       - department: Intelligent Mobility
         link: '#'
