Moving funding and updating bio yaml

--- a/rca/project_styleguide/templates/patterns/pages/student/student_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/student/student_detail.yaml
@@ -21,7 +21,7 @@ context:
           - { label: 'Head of Programmes' }
     email: imdc@rca.ac.uk
     introduction: "Katrine's work aims to intrigue, interest and invite people to take steps in the direction towards a more sustainable, fair, fun and beautiful future for our society."
-    body: "<p>Katrine's work aims to intrigue, interest and invite people to take steps in the direction towards a more sustainable, fair, fun and beautiful future for our society.</p><p>She is deeply concerned with the scale and complexity of the problems we are facing today, e.g. climate changes, overuse of resources, social inequality, and feels a natural responsibility to be part of creating solutions for these problems.</p>"
+    bio: "<p>Katrine's work aims to intrigue, interest and invite people to take steps in the direction towards a more sustainable, fair, fun and beautiful future for our society.</p><p>She is deeply concerned with the scale and complexity of the problems we are facing today, e.g. climate changes, overuse of resources, social inequality, and feels a natural responsibility to be part of creating solutions for these problems.</p>"
     programme: Materials Science MPhil/PhD
     thesis: '#'
     more_information:
@@ -29,10 +29,6 @@ context:
         value:
           body: 'TBC'
           heading: 'PhD'
-      - path:
-        value:
-          body: 'TBC'
-          heading: 'Funding'
       - path:
         value:
           body: 'TBC'
