--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.yaml
@@ -7,6 +7,8 @@ context:
     - page: { title: 'Materials Science Research Centre', url: '#' }
   supervisors:
     - { title: 'Dr John Smith', link: '#' }
+  funding:
+    - { title: 'TECHNE, AHRC Doctoral Award', link: '#' }
   social_links:
     - item:
       value:
