Thank you layout tweaks

--- a/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/forms/thanks.yaml
@@ -1,6 +1,6 @@
 context:
   page:
-    title: Thanks
+    title: Thank you
     introduction: Your enquiry about an Architecture MA has now been received and we will respond to you within 48 hours.
     teasers:
       title: More about Architecture
