--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ psycopg2==2.7.7
 wagtail-django-recaptcha==1.0
 django-pattern-library==0.2.4
 django-birdbath==0.0.2
+django-countries==7.0
 
 # Production dependencies
 whitenoise[brotli]==4.1.2
