--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==2.2.19
 wagtail==2.11.2
+# Pin treebeard to <4.5, see: https://github.com/wagtail/wagtail/issues/6820
+django-treebeard<4.5
 psycopg2==2.7.7
 wagtail-django-recaptcha==1.0
 django-pattern-library==0.2.4
