--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-birdbath==0.0.2
 django-countries==7.0
 # Pin cryptography, see: https://github.com/docker/compose/issues/8105#issuecomment-777098885
 cryptography==3.3.2
+mailchimp-marketing==3.0.29
 
 # Production dependencies
 whitenoise[brotli]==5.2.0
