Amendments to hardcoded short course wording

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course--no-dates.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course--no-dates.yaml
@@ -117,7 +117,7 @@ context:
     - { text: 'Custom Executive Education', href: '#' }
     - { text: 'Innovation RCA', href: '#' }
   booking_bar:
-    message: 'Applications are now closed'
+    message: 'Bookings not yet open'
     action: 'Register your interest for upcoming dates'
     modal: false
   access_planit_data:
