Adds extra fields to the student page model

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--student.yaml
@@ -6,10 +6,11 @@ context:
   related_schools:
     - page: { title: 'Materials Science Research Centre', url: '#' }
   supervisors:
-    - { title: 'Dr John Smith', link: '#' }
-  funding:
-    - { title: 'TECHNE, AHRC Doctoral Award', link: '#' }
+    - item:
+      title: 'Dr John Smith'
+      link: '#'
   page:
+    student_funding: 'TECHNE, AHRC Doctoral Award'
     personal_links:
       all:
         - {
