--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ psycopg2==2.8.6
 wagtail-django-recaptcha==1.0
 django-pattern-library==0.3.0
 django-birdbath==0.0.2
+# Pin cryptography, see: https://github.com/docker/compose/issues/8105#issuecomment-777098885
+cryptography==3.3.2
 
 # Production dependencies
 whitenoise[brotli]==5.2.0
