Adding streamfield to editorial page

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail--no-video.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail--no-video.yaml
@@ -11,3 +11,5 @@ context:
         title: News
     introduction: 'The Royal College of Art USA Inc. (RCA USA) welcomes renowned Apple designer Peter Russell-Clarke as its incoming Chair and President.'
     introduction_image: false
+    body:
+      - dummy
