Adding inline CTA in

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.yaml
@@ -15,6 +15,13 @@ context:
     video_caption: Watch the course introduction
     body:
       - dummy
+    inline_cta:
+      - block:
+        value:
+          title: Interested in design as a catalyst for change?
+          description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
+          action: MA Design Products
+          link: '#'
 
 tags:
   include_block:
