--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.yaml
@@ -22,6 +22,43 @@ context:
           description: In addition to the research themes, the School of Architecture created the Laboratory for Design & Machine Learning to conduct research into new interdisciplinary forms of designing, evaluation, and policymaking.
           action: MA Design Products
           link: '#'
+    contact: true
+    contact_model_image: true
+  related_pages:
+    title: Also of interest
+    items:
+      - {
+          title: 'Innovation RCA',
+          link: '#',
+          meta: Staff,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
+      - {
+          title: 'Consultancy & knowledge exchange',
+          link: '#',
+          meta: News,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
+      - {
+          title: 'Custom executive education',
+          link: '#',
+          meta: Event,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
+      - {
+          title: 'Custom executive education',
+          link: '#',
+          meta: Research,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
 
 tags:
   include_block:
